2006-11-07 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* data/labyrinth.glade:
	Follow global toolbar style prefs in
	browser window (Jean-François Fortin Tam)

	* src/DrawingThought.py:
	Add erase mode using shift key
	Add erase action to undo list

2006-11-06 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/Browser.py:
	* src/MainWindow.py:
	Fix a couple of typos and unclear messages
	Issue #28 - Josef Vybíral

	* src/MainWindow.py:
	* src/Browser.py:
	* src/utils.py:
	* data/labyrinth-ui.xml:
	* data/labyrinth.glade:
	New, improved Browser window
	Move "Help->About" to Browser window.  Remove from map windows
	Based heavily on a patch from Jean-François Fortin Tam.  Issue #15

	* src/MainWindow.py:
	* data/labyrinth-ui.xml:
	Remove Quit and New actions.  Remove their callbacks
	- New hasn't worked for a while anyway and Quit
	has been removed for a while
	Convert several menu items to use stock labels

2006-11-05 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/TextThought.py:
	Don't draw selected text when
	not editing

	* src/MMapArea.py:
	Implement ctrl-a when no thought
	is being edited

	* src/TextThought.py:
	implement ctrl-a in thoughts.
	Various improvments in handling
	arrow keys

	* src/TextThought.py:
	Make backspace work again at end of text

	* src/TextBufferMarkup.py:
	* src/DrawingThought.py:
	* src/UndoManager.py:
	* src/MainWindow.py:
	* src/BaseThought.py:
	* src/ImageThought.py:
	* src/TextThought.py:
	* src/MMapArea.py:
	* src/Makefile.am:
	* data/labyrinth-ui.xml:
	Add undo and redo capabilities
	Each action should be mirrored properly
	Thought selection across undo's may be somewhat
	shaky and inconsistant.
	There are probably also many bugs still in the
	implementation

	* src/Links.py:
	Clean up old Links class


2006-11-04 Don Scorgie <DonScorgie@Blueyonder.co.uk>

	* src/TextThought.py:
	Hook up remaining (interesting) signals from IMContext
	Insert preedit text where appropriate (including all the
	shiny pango attrs that go with it)
